--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Byte-compiled / optimized / DLL files
-__pycache__/
+*__pycache__/
 *.py[cod]
 *$py.class
 
@@ -26,6 +26,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+revisonzenenv
 
 # PyInstaller
 # Usually these files are written by a python script from a template
@@ -106,9 +107,8 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
 .venv/
-env/
+.env
 venv/
 ENV/
 env.bak/
@@ -116,13 +116,12 @@ venv.bak/
 
 # Spyder project settings
 .spyderproject
-.spyproject
 
 # Rope project settings
 .ropeproject
 
 # mkdocs documentation
-/site
+site
 
 # mypy
 .mypy_cache/
@@ -140,7 +139,6 @@ cython_debug/
 
 # IDE specific files
 .idea/
-.vscode/
 *.sublime-workspace
 *.sublime-project
 
